src/objects/DSI__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account to which this DSI belongs to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DSIs</relationshipLabel>
        <relationshipName>DSIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Entitlement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if this DSI is active as per the entitlement end date</inlineHelpText>
        <label>Active Entitlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Users__c</fullName>
        <description>The number of users actively using MSTR in this DSI.</description>
        <inlineHelpText>The number of active end users in this DSI.</inlineHelpText>
        <label>Active Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloud_Environment_ID__c</fullName>
        <description>Environment ID of the Cloud DSI</description>
        <inlineHelpText>Environment ID of the Cloud DSI</inlineHelpText>
        <label>Cloud Environment ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compass_ID__c</fullName>
        <formula>Account__r.Compass_Id_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compass ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Change_Date__c</fullName>
        <label>Configuration Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Do_Not_Use_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Do Not Use</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DSIs</relationshipLabel>
        <relationshipName>DSIs_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion__c</fullName>
        <formula>HYPERLINK(&quot;https://mstr--mirror.lightning.force.com/lightning/r/Report/00O0x000000PYCuEAO/view?fv0=&quot;&amp; CASESAFEID(Id) ,&quot;Report&quot;, &quot;_blank&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSIID__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <inlineHelpText>An auto number assigned to the newly created DSI</inlineHelpText>
        <label>DSI ID(Auto)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DSI_ID_18_digit__c</fullName>
        <description>DSI 18 digit ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSI ID (18-digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSI_ID__c</fullName>
        <inlineHelpText>An unique identifier for this DSI carried over from the legacy system</inlineHelpText>
        <label>DSI ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSI_Name_ID__c</fullName>
        <formula>Description_Name__c+&quot; &quot;+&apos;(&apos;+  DSI_ID__c+&apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSI Name ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Name__c</fullName>
        <description>Field used to build up DSI Name.</description>
        <inlineHelpText>Enter the name required. Value will be used to make the DSI Name.</inlineHelpText>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A short description about the DSI</inlineHelpText>
        <label>Legacy Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elastic_Cloud_Console__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the dsi is created from Elastic Cloud Console. This will determine if we terminate subscription and entitlements during the terminate key api call</description>
        <inlineHelpText>Check if DSI is created to support Elastic Cloud Console.</inlineHelpText>
        <label>Elastic Cloud Console</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entitlement_End_Date__c</fullName>
        <inlineHelpText>Date of this DSI&apos;s entitlement ends</inlineHelpText>
        <label>Entitlement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_Status__c</fullName>
        <label>Entitlement Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage</fullName>
                </value>
                <value>
                    <fullName>Genesys Choice</fullName>
                </value>
                <value>
                    <fullName>PureConnect – Named Users</fullName>
                </value>
                <value>
                    <fullName>PureConnect – Concurrent Users</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>PPU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GS_NumUsers__c</fullName>
        <label># Users</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GS_Organization_Name__c</fullName>
        <description>Organization Name</description>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Perpetual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Perpetual</description>
        <label>Perpetual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HIPAA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that the support for this DSI should be provided with HIPPA compliance</inlineHelpText>
        <label>HIPAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instance_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to the instance form for this DSI. If this is blank, click the button &quot;New Instance Form&quot; to create one.</inlineHelpText>
        <label>Instance Form</label>
        <referenceTo>Enterprise_Configuration__c</referenceTo>
        <relationshipLabel>DSIs</relationshipLabel>
        <relationshipName>DSIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instance_Number__c</fullName>
        <formula>&quot;I-&quot; + DSI_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <inlineHelpText>Contains contact method preferences, version details, update plans, environment data, and any other critical piece of information pertaining to this DSI.</inlineHelpText>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LicensingCalculationDate__c</fullName>
        <label>Licensing Calculation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MCIActivationDateTime__c</fullName>
        <description>storing UTC value for Activation DateTime</description>
        <label>MCI Activation DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MCIBatchStatus__c</fullName>
        <label>MCI Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MCIEnvironmentName__c</fullName>
        <label>MCI Environment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCIEnvironmentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The contact that originated the MCI environment via the corporate Website</inlineHelpText>
        <label>MCI Environment Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DSIs (MCI Environment Owner)</relationshipLabel>
        <relationshipName>DSIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCIEnvironmentUrl__c</fullName>
        <description>stores unique login url per mci environment</description>
        <label>MCI Environment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MCIExpirationDatetime__c</fullName>
        <description>UTC Representation of Expiration DateTime</description>
        <label>MCI Expiration Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MCI_Type__c</fullName>
        <label>MCI Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HyperIntelligence</fullName>
                </value>
                <value>
                    <fullName>IntelNow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSTR_Managed_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that DSI is managed by MSTR Cloud.</inlineHelpText>
        <label>MSTR Managed Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_Assets__c</fullName>
        <inlineHelpText>Total number of assets that belongs to this DSI</inlineHelpText>
        <label># Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Subscriptions__c</fullName>
        <inlineHelpText>Total number of Subscriptions this DSI has</inlineHelpText>
        <label># Subscriptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEM_Generated_DSI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox to determine if dsi is generated from the OEM key gen portal</description>
        <inlineHelpText>checkbox to determine if dsi is generated from the OEM key gen portal</inlineHelpText>
        <label>OEM Generated DSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <description>As part of the translation effort we will be adding the DSI SKU to DSIs as they are translated. To capture DSI information ahead of time we will create a field for the Technical Support team to capture the information so it can be used by the translation process.</description>
        <inlineHelpText>Operating system information used by the translation process</inlineHelpText>
        <label>Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIX</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>Solaris</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_DSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When a DSI is cloned, this field will store the link to the parent DSI automatically.</description>
        <inlineHelpText>When a DSI is cloned, this field will store the link to the parent DSI automatically.</inlineHelpText>
        <label>Parent DSI</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipLabel>DSIs</relationshipLabel>
        <relationshipName>DSIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Perception__c</fullName>
        <inlineHelpText>How the specific deployment within the account regards MSTR</inlineHelpText>
        <label>Perception</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2: Advocate</fullName>
                </value>
                <value>
                    <fullName>1: Positive</fullName>
                </value>
                <value>
                    <fullName>0: Neutral</fullName>
                </value>
                <value>
                    <fullName>-1: Negative</fullName>
                </value>
                <value>
                    <fullName>-2: Detractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox Prevents DSI from being picked up in the Batch Job.</description>
        <inlineHelpText>Checking this field will stop the DSI from being picked up in the nightly Platform Flag batch job.</inlineHelpText>
        <label>Platform Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>Populated in a Nightly Batch Job</description>
        <inlineHelpText>Indicates the platform used within the DSI: MicroStrategy Cloud Environment (MCE), MicroStrategy Cloud Platform (MCP) and/or MicroStrategy Enterprise Platform (MEP).</inlineHelpText>
        <label>Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MCE</fullName>
                </value>
                <value>
                    <fullName>MCP</fullName>
                </value>
                <value>
                    <fullName>MEP</fullName>
                </value>
                <value>
                    <fullName>MCI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBCF_Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safe_Harbor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that the support for this DSI should be provided with Safe Harbor compliance</inlineHelpText>
        <label>Safe Harbor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_Aux__c</fullName>
        <label>Search Aux</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceNow_Id__c</fullName>
        <externalId>true</externalId>
        <label>ServiceNow Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates the current status of DSI Maintenance, term and cloud subscription dates. Active = The subscriptions are not yet expired. Expired = The end date is within 180 days from today. Inactive = The end date of the subscriptions is more than 180 days past. Archived = This DSI has no licenses or subscriptions and is not visible to the general user population</description>
        <inlineHelpText>Indicates the Status of MX, TX, MCE SUBs. 
Active=The subscriptions are active.
Expired=The end date is within 180 days from today.
Inactive=The end date of the subscriptions is more than 180 days past.
Archived=This DSI is hidden from SF Users.</inlineHelpText>
        <label>DSI Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <inlineHelpText>Indicates the level of support this DSI is entitled to</inlineHelpText>
        <label>Support Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Support Owner responsible for overseeing support of this DSI.</description>
        <inlineHelpText>The Support Owner responsible for overseeing support of this DSI.</inlineHelpText>
        <label>Support Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DSIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Search_Aux__c</fullName>
        <label>Test_Search_Aux</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToBeDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ToBeDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TranslationType__c</fullName>
        <inlineHelpText>Type of the translation used by the translation process</inlineHelpText>
        <label>Translation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UC_Form_Edit_Link__c</fullName>
        <label>UC Form Edit Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UC_Form_ID__c</fullName>
        <label>UC Form ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UC_Form__c</fullName>
        <description>Dynamic link to create or edit the UC form for this DSI.</description>
        <formula>IF( ISBLANK( UC_Form_Edit_Link__c ), 
HYPERLINK(&quot;https://www.surveygizmo.com/s3/3285229/Universal-Coding-Form?recordid=&quot;&amp; DSI_ID_18_digit__c &amp;&quot;&amp;sfuserid=&quot;&amp; $User.User_ID_18_digit__c &amp;&quot;&amp;type=DSI&quot;, &quot;Create UC Form&quot; ,&quot;_self&quot;), 
HYPERLINK(UC_Form_Edit_Link__c&amp; &quot;&amp;sfucformid=&quot; &amp; UC_Form_ID__c &amp; &quot;&amp;sfuserid=&quot; &amp; $User.User_ID_18_digit__c, &quot;Edit UC Form&quot;,&quot;_self&quot; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click here to create or edit the Universal Coding form for this DSI.</inlineHelpText>
        <label>UC Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Exceptions__c</fullName>
        <inlineHelpText>Versions selected in this dropdown will force this specific DSI to not generate a Universal Key</inlineHelpText>
        <label>Non Universal Exceptions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Version</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UseCase__c</fullName>
        <inlineHelpText>How is the account using MSTR technology on this DSI</inlineHelpText>
        <label>Use Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Updated_Date__c</fullName>
        <description>Date and Time the DSI Version was last updated.</description>
        <inlineHelpText>Date and Time the DSI Version was last updated</inlineHelpText>
        <label>Version Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <inlineHelpText>Version(s) of Microstrategy Platform deployed in production for this DSI.</inlineHelpText>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>11.0</fullName>
                </value>
                <value>
                    <fullName>10.11.0</fullName>
                </value>
                <value>
                    <fullName>10.10.0</fullName>
                </value>
                <value>
                    <fullName>10.9.0</fullName>
                </value>
                <value>
                    <fullName>10.8.0</fullName>
                </value>
                <value>
                    <fullName>10.7.0</fullName>
                </value>
                <value>
                    <fullName>10.6.0</fullName>
                </value>
                <value>
                    <fullName>10.5.0</fullName>
                </value>
                <value>
                    <fullName>10.4.0</fullName>
                </value>
                <value>
                    <fullName>10.3.0</fullName>
                </value>
                <value>
                    <fullName>10.2.0</fullName>
                </value>
                <value>
                    <fullName>10.1.0</fullName>
                </value>
                <value>
                    <fullName>10.0.0</fullName>
                </value>
                <value>
                    <fullName>9.5.1</fullName>
                </value>
                <value>
                    <fullName>9.5.0</fullName>
                </value>
                <value>
                    <fullName>9.4.1</fullName>
                </value>
                <value>
                    <fullName>9.4.0</fullName>
                </value>
                <value>
                    <fullName>9.3.1</fullName>
                </value>
                <value>
                    <fullName>9.3.0</fullName>
                </value>
                <value>
                    <fullName>9.2.1</fullName>
                </value>
                <value>
                    <fullName>2019 Update 2</fullName>
                </value>
                <value>
                    <fullName>10.4.8</fullName>
                </value>
                <value>
                    <fullName>2019 Update 8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version_changed_by_User__c</fullName>
        <description>User who changed DSI Version</description>
        <inlineHelpText>User who changed DSI Version</inlineHelpText>
        <label>Version Updated By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DSI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DSI_ID__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>HIPAA__c</columns>
        <columns>Safe_Harbor__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All DSIs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_DSIs_Recent</fullName>
        <columns>DSI_ID__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>HIPAA__c</columns>
        <columns>Safe_Harbor__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MCIEnvironmentOwner__c</columns>
        <columns>MCIActivationDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Platform__c</field>
            <operation>equals</operation>
            <value>MCI</value>
        </filters>
        <label>All DSIs Recent</label>
    </listViews>
    <nameField>
        <label>DSI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DSIs</pluralLabel>
    <recordTypes>
        <fullName>Archived</fullName>
        <active>true</active>
        <label>Archived</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>DSI_Name_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Name),
ISCHANGED(Description_Name__c),
NOT(ISNEW()),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
$Profile.Name &lt;&gt; &apos;SOP&apos;
)</errorConditionFormula>
        <errorMessage>You don&apos;t have sufficient privileges to adjust the DSI name. 
Please contact SOP for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Can_not_be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISCHANGED( Status__c   ) ,
ISPICKVAL(Status__c, &apos;&apos;)

)</errorConditionFormula>
        <errorMessage>DSI Status cannot be blank, select a status and click Save.</errorMessage>
    </validationRules>
</CustomObject>